package Modelos;

public interface CanalDeNotificacion {
    public static void enviar_notificacion(){
    }
}
