package Modelos;

public class EnvioEmail implements CanalDeNotificacion{
    public void enviar_notificacion(){
    }
}
