package Modelos;

public class EnvioWhatsapp implements CanalDeNotificacion{
    public void enviar_notificacion(){
    }
}
