package Modelos;

public interface TecnicoDisponible {

}
